prod/DeploymentConfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: linuxpolskaprod
  name: linuxpolskaprod
spec:
  replicas: 1
  selector:
    deploymentconfig: linuxpolskaprod
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: linuxpolskaprod
        deploymentconfig: linuxpolskaprod
    spec:
      containers:
      - image: docker-registry.default.svc:5000/app-pers/linuxpolskaapp@sha256:285ee868376ed1cf27fa2d620f5f705d14eabfd06b528aad46bce77496a330ff
        imagePullPolicy: Always
        name: linuxpolskaprod
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      containerNames:
      - linuxpolskaprod
      from:
        kind: ImageStreamTag
        name: linuxpolskaprod:tested
        namespace: app-pers
    type: ImageChange
