prod/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: linuxpolskaprod
  name: linuxpolskaprod
spec:
  clusterIP:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deploymentconfig: linuxpolskaprod
  sessionAffinity: None
  type: ClusterIP
