prod/Route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: linuxpolskaprod
  name: linuxpolskaprod
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: linuxpolskaprod
    weight: 100
  wildcardPolicy: None
